// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable should allow to render options 1`] = `
<ControllableComponent
  options={
    Array [
      Object {
        "label": "Option 1",
        "value": 1,
      },
      Object {
        "label": "Option 10",
        "value": 10,
      },
      Object {
        "label": "Option 5",
        "value": 5,
      },
    ]
  }
  renderer={[Function]}
>
  <Selectable
    blurOnClickOutside={true}
    defaultFocused={false}
    defaultSearch=""
    focused={false}
    focusedElement={undefined}
    onChange={[Function]}
    onFocusedChange={[Function]}
    onFocusedElementChange={[Function]}
    onSearchChange={[Function]}
    options={
      Array [
        Object {
          "label": "Option 1",
          "value": 1,
        },
        Object {
          "label": "Option 10",
          "value": 10,
        },
        Object {
          "label": "Option 5",
          "value": 5,
        },
      ]
    }
    renderer={[Function]}
    search=""
    value={undefined}
  >
    <div
      onMouseLeave={[Function]}
    >
      <div
        key="1"
      >
        Option 1
      </div>
      <div
        key="10"
      >
        Option 10
      </div>
      <div
        key="5"
      >
        Option 5
      </div>
    </div>
  </Selectable>
</ControllableComponent>
`;

exports[`Selectable should render with minimum props 1`] = `
<ControllableComponent
  options={Array []}
  renderer={[Function]}
>
  <Selectable
    blurOnClickOutside={true}
    defaultFocused={false}
    defaultSearch=""
    focused={false}
    focusedElement={undefined}
    onChange={[Function]}
    onFocusedChange={[Function]}
    onFocusedElementChange={[Function]}
    onSearchChange={[Function]}
    options={Array []}
    renderer={[Function]}
    search=""
    value={undefined}
  >
    <span
      onMouseLeave={[Function]}
    />
  </Selectable>
</ControllableComponent>
`;
